# cjm-transcript-correction-core

./: .gitignore  README.md  capabilities_test.yaml  cjm.yaml  cli.html  cli.html.md  graph.html  graph.html.md  index.html  models.html  models.html.md  pipeline.html  pipeline.html.md  plugins_test.yaml  pyproject.toml  robots.txt  search.json  signals.html  signals.html.md  sitemap.xml
cjm_transcript_correction_core/: _modidx.py  cli.py  graph.py  journal.py  models.py  pipeline.py  signals.py
nbs/: cli.ipynb  graph.ipynb  index.ipynb  models.ipynb  nbdev.yml  pipeline.ipynb  signals.ipynb
tests/: test_cli.py  test_graph.py  test_journal.py  test_models.py  test_pipeline.py  test_signals.py
