[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cjm-transcript-correction-core"
dynamic = ["version"]
description = "A frontend-agnostic core for the transcript correction workflow — the first downstream graph-extension core; composes the graph-storage capability worker into a headless pipeline that applies unified, non-destructive corrections (text, punctuation, segmentation) as a supersede-able overlay on a committed decomposition spine, recomputes the review worklist from deterministic signals, and exposes a CLI as its first driver."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Christian J. Mills", email = "9126128+cj-mills@users.noreply.github.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = ['cjm_substrate>=0.0.57', 'cjm_context_graph_primitives>=0.0.15', 'cjm-context-graph-layer>=0.0.11', 'cjm-transcript-graph-schema>=0.0.7']

[project.urls]
Repository = "https://github.com/cj-mills/cjm-transcript-correction-core"

[project.scripts]
cjm-transcript-correction-core = "cjm_transcript_correction_core.cli:main"

[project.entry-points."cjm_context_graph_layer.replay"]
correction = "cjm_transcript_correction_core.journal:correction_replay_handlers"

[tool.setuptools.dynamic]
version = {attr = "cjm_transcript_correction_core.__version__"}

[tool.setuptools.packages.find]
include = ["cjm_transcript_correction_core*"]
